<resources>
    <string name="app_name">Music_App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">528449238391776</string>
    <string name="fb_login_protocol_scheme">fb528449238391776</string>
    <string name="single">---</string>
    <string name="runtime">--:--</string>
    <string name="totaltime">--:--</string>
    <string name="title">------</string>
    <string name="gredientbg">TODO</string>
    <string name="back">TODO</string>
    <string name="tim">TODO</string>
    <string name="previous">TODO</string>
    <string name="random">TODO</string>
    <string name="playorpause">TODO</string>
    <string name="next">TODO</string>
    <string name="repeat">TODO</string>
    <string name="chinhsach">
        Cập nhật gần nhất: 17-04-2013
Xin chào, và cảm ơn bạn đã ghé thăm trang chính sách bản quyền của EKIV. EKIV tôn trọng quyền sở hữu trí tuệ và mong muốn người sử dụng của EKIV cũng tôn trọng như vậy. Nếu bạn là chủ bản quyền, hoặc đại diện của chủ bản quyền, và bạn tin rằng bất kỳ tài liệu có bản quyền nào trực tiếp có sẵn thông qua Dịch vụ EKIV vi phạm tác phẩm có bản quyền của bạn, vui lòng cho chúng tôi biết.
Vui lòng sử dụng biểu mẫu trên trang web để gửi thông báo về cáo buộc vi phạm bản quyền. Ngoài ra, thông báo về cáo buộc vi phạm bản quyền có thể được gửi cho đại diện bản quyền được chỉ định của EKIV tại địa chỉ sau đây:
EKIV USA Inc.
Bên Nhận: Legal Department, Copyright Agent
4 World Trade Center, 150 Greenwich Street, 62nd Floor, New York, NY 10007
infringement-claim@EKIV.com
Thông báo về cáo buộc vi phạm bản quyền phải được gửi cho đại diện bản quyền của EKIV như được liệt kê ở trên. Vui lòng bao gồm thông tin càng chi tiết càng tốt để giúp chúng tôi xác định các sự việc hoặc trường hợp, bao gồm, nếu có thể:
1. Một chữ ký tay hoặc điện tử của người sở hữu (hoặc người được uỷ quyền hành động thay mặt cho chủ sở hữu) của bản quyền bị cáo buộc vi phạm;
2. Việc xác định cụ thể mỗi tác phẩm có bản quyền được cho là đã bị vi phạm;
3. Sự mô tả về nơi mà tài liệu được tin là bị vi phạm có trên Dịch vụ EKIV hoặc các Trang web của EKIV (vui lòng càng chi tiết càng tốt và cung cấp một URL để giúp chúng tôi xác định vị trí của tài liệu mà bạn đang báo cáo);
4. Thông tin liên lạc về bên khiếu nại, chẳng hạn như tên, địa chỉ, số điện thoại, địa chỉ email đầy đủ;
5. Một báo cáo rằng bên khiếu nại có sự tin tưởng chắc chắn rằng việc sử dụng (các) tác phẩm theo cách thức bị khiếu nại là không được chủ sở hữu bản quyền, đại diện của chủ sở hữu bản quyền, hay luật pháp cho phép;
6. Một báo cáo rằng thông tin trong thông báo là chính xác, và bên khiếu nại là chủ sở hữu của quyền bị cáo buộc vi phạm, hoặc đại diện của chủ sở hữu.
Chúng tôi cũng nên cho bạn biết rằng EKIV có chính sách chấm dứt trong trường hợp thích hợp các tài khoản của những người đăng ký là những người vi phạm nhiều lần.
Copyright © 2012 EKIV AB. Tất cả các quyền đều được bảo lưu.
EKIV AB
Sweden
SE556703748501
    </string>
    <string name="channel_name">Audio Player</string>
    <string name="channel_description"></string>
</resources>