<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mContainer"
    android:background="@color/near_black"
    android:orientation="vertical"
    tools:context=".Activity.PlayMusic">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarplaynhac"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="0dp"
        android:background="#00FFFFFF"
        android:gravity="center_horizontal"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme"/>

    <ImageView
        android:id="@+id/img_Gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/near_black"
        android:contentDescription="@string/gredientbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPagerdianhac"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:layout_below="@+id/toolbarplaynhac"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp" />

    <RelativeLayout
        android:id="@+id/info_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewPagerdianhac"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/txt_tenbaihatplaynhac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothammedium1"
            android:maxWidth="310dp"
            android:text="Song Title"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_tencasiplaynhac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_tenbaihatplaynhac"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/gothammedium1"
            android:maxWidth="350dp"
            android:text="Single Name"
            android:textColor="#E4E4E4"
            android:textSize="20sp" />
    </RelativeLayout>

    <SeekBar
        android:id="@+id/seekBartime"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/info_music"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:progressTint="#FFFFFF"
        android:progressBackgroundTint="@color/white"
        android:thumb="@drawable/new_moon"/>

    <RelativeLayout
        android:id="@+id/rltime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBartime"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/txt_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothammedium1"
            android:text="@string/runtime"
            android:textColor="#E4E4E4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_timetotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/gothammedium1"
            android:text="@string/totaltime"
            android:textColor="#E8E8E8"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rltime"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/img_Buttontim"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="24dp"
            android:layout_toStartOf="@+id/img_Buttonpreview"
            android:background="@null"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_love"/>

        <ImageButton
            android:id="@+id/img_Buttonpreview"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/img_Buttonplaypause"
            android:background="@null"
            android:contentDescription="@string/previous"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/iconpreview" />

        <ImageButton
            android:id="@+id/img_Buttonplaypause"
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:background="@null"
            android:contentDescription="@string/playorpause"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/iconplaybanner" />

        <ImageButton
            android:id="@+id/img_Buttonnext"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/img_Buttonplaypause"
            android:background="@null"
            android:contentDescription="@string/next"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/iconnext" />

        <ImageButton
            android:id="@+id/img_Buttonlap"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@+id/img_Buttonnext"
            android:background="@null"
            android:contentDescription="@string/repeat"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/iconrepeat" />
    </RelativeLayout>
</RelativeLayout>